--- a/service-manager.yml
+++ b/service-manager.yml
@@ -42,10 +42,18 @@ serviceManager:
         - "ip-172-31-30-255.us-west-2.compute.internal"
         - "ip-172-31-30-254.us-west-2.compute.internal"
         - "ip-172-31-30-253.us-west-2.compute.internal"
-    redis-query-service: 
-      discovery-client: true 
-      command: "/home/tim/bin/jars/redis-query-service-0.3.1-RELEASE.jar" 
-      port: 8763 
+    hello-world:
+      discovery-client: true
+      command: "/home/tim/bin/jars/hello-world-0.3.3-SNAPSHOT.jar"
+      port: 8763
+      hosts: 
+        - "ip-172-31-30-255.us-west-2.compute.internal"
+        - "ip-172-31-30-254.us-west-2.compute.internal"
+        - "ip-172-31-30-253.us-west-2.compute.internal"
+    greeting-service:
+      discovery-client: true
+      command: "/home/tim/bin/jars/greeting-service-0.3.3-SNAPSHOT.jar"
+      port: 8764
       hosts: 
         - "ip-172-31-30-255.us-west-2.compute.internal"
         - "ip-172-31-30-254.us-west-2.compute.internal"
