--- a/router.yml
+++ b/router.yml
@@ -13,6 +13,10 @@ server:
 
      
 router:
+  enable-service-discovery-filter: true
+  auto-scale:
+    scale-down-threshold: 1
+    scale-up-threshold: 50
   services:
     hello-world:
       deployments:
