--- a/service-manager.yml
+++ b/service-manager.yml
@@ -34,23 +34,23 @@ serviceManager:
         - "ip-172-31-30-255.us-west-2.compute.internal"
         - "ip-172-31-30-254.us-west-2.compute.internal"
         - "ip-172-31-30-253.us-west-2.compute.internal"
-    query-service: 
-      discovery-client: true 
-      command: "/home/tim/bin/jars/query-service-0.4.1-SNAPSHOT.jar" 
-      port: 8762 
-      hosts: 
-        - "ip-172-31-30-255.us-west-2.compute.internal"
-        - "ip-172-31-30-254.us-west-2.compute.internal"
-        - "ip-172-31-30-253.us-west-2.compute.internal"
+   # query-service: 
+    #  discovery-client: true 
+    #  command: "/home/tim/bin/jars/query-service-0.4.1-SNAPSHOT.jar" 
+    #  port: 8762 
+    #  hosts: 
+    #    - "ip-172-31-30-255.us-west-2.compute.internal"
+    #    - "ip-172-31-30-254.us-west-2.compute.internal"
+    #    - "ip-172-31-30-253.us-west-2.compute.internal"
     hello-world:
       discovery-client: true
       command: "/home/tim/bin/jars/hello-world-0.4.1-SNAPSHOT.jar"
       port: 8763
       hosts: 
         - "ip-172-31-30-254.us-west-2.compute.internal"
-    greeting-service:
-      discovery-client: true
-      command: "/home/tim/bin/jars/greeting-service-0.4.1-SNAPSHOT.jar"
-      port: 8764
-      hosts: 
-        - "ip-172-31-30-253.us-west-2.compute.internal"
+  #  greeting-service:
+  #    discovery-client: true
+  #    command: "/home/tim/bin/jars/greeting-service-0.4.1-SNAPSHOT.jar"
+  #    port: 8764
+  #    hosts: 
+  #      - "ip-172-31-30-253.us-west-2.compute.internal"
