--- a/service-manager.yml
+++ b/service-manager.yml
@@ -48,9 +48,9 @@ serviceManager:
       port: 8763
       hosts: 
         - "ip-172-31-30-255.us-west-2.compute.internal"
-  #  greeting-service:
-  #    discovery-client: true
-  #    command: "/home/tim/bin/jars/greeting-service-0.4.1-SNAPSHOT.jar"
-  #    port: 8764
-  #    hosts: 
-  #      - "ip-172-31-30-253.us-west-2.compute.internal"
+    greeting-service:
+      discovery-client: true
+      command: "/home/tim/bin/jars/greeting-service-0.4.1-SNAPSHOT.jar"
+      port: 8764
+      hosts: 
+        - "ip-172-31-30-253.us-west-2.compute.internal"
