--- a/service-manager.yml
+++ b/service-manager.yml
@@ -43,11 +43,13 @@ serviceManager:
     redis-query-service:
       discovery-client: true
       command: "/home/tim/bin/jars/redis-query-service-0.4.1-SNAPSHOT.jar"
+      port: 8763
       hosts: 
         - "ip-172-31-30-254.us-west-2.compute.internal"
     merchant-locator:
       discovery-client: true
       command: "/home/tim/bin/jars/merchant-locator-0.4.1-SNAPSHOT.jar"
+      port: 8769
       hosts: 
         - "ip-172-31-30-255.us-west-2.compute.internal"
     #hello-world:
