--- a/service-manager.yml
+++ b/service-manager.yml
@@ -48,6 +48,11 @@ serviceManager:
         - "ip-172-31-30-254.us-west-2.compute.internal"
     merchant-locator:
       discovery-client: true
+      auto-scale: true
+      scaleUpResponseTimeThreshold: 400
+      scaleDownResponseTimeThreshold: 200
+      maxInstances: 3
+      minInstances: 1
       command: "/home/tim/bin/jars/merchant-locator-0.4.1-SNAPSHOT.jar"
       port: 8764
       hosts: 
