--- a/service-manager.yml
+++ b/service-manager.yml
@@ -53,6 +53,8 @@ serviceManager:
       scaleDownResponseTimeThreshold: 200
       maxInstances: 3
       minInstances: 1
+      stableMaxIterations: 3
+      unstableMaxIterations: 3
       command: "/home/tim/bin/jars/merchant-locator-0.4.1-SNAPSHOT.jar"
       port: 8764
       hosts: 
