--- a/service-manager.yml
+++ b/service-manager.yml
@@ -34,6 +34,12 @@ serviceManager:
         - "ip-172-31-30-255.us-west-2.compute.internal"
         - "ip-172-31-30-254.us-west-2.compute.internal"
         - "ip-172-31-30-253.us-west-2.compute.internal"
+    turbine:
+      discovery-client: true
+      command: "/home/tim/bin/jars/turbine-0.4.1-SNAPSHOT.jar"
+      port: 8766
+      hosts:
+        - "ip-172-31-30-255.us-west-2.compute.internal"
     query-service: 
       discovery-client: true 
       command: "/home/tim/bin/jars/query-service-0.4.1-SNAPSHOT.jar" 
