--- a/service-manager.yml
+++ b/service-manager.yml
@@ -65,15 +65,4 @@ serviceManager:
       port: 8764
       hosts: 
         - "ip-172-31-30-255.us-west-2.compute.internal"
-    #hello-world:
-    #  discovery-client: true
-    #  command: "/home/tim/bin/jars/hello-world-0.4.1-SNAPSHOT.jar"
-    #  port: 8763
-    #  hosts: 
-    #    - "ip-172-31-30-255.us-west-2.compute.internal"
-    #greeting-service:
-    #  discovery-client: true
-    #  command: "/home/tim/bin/jars/greeting-service-0.4.1-SNAPSHOT.jar"
-    #  port: 8764
-    #  hosts: 
-    #    - "ip-172-31-30-253.us-west-2.compute.internal"
+    # Rabbit is running on host ip-172-31-30-253.us-west-2.compute.internal port 8766 and management port 8767
