--- a/service-manager.yml
+++ b/service-manager.yml
@@ -17,53 +17,62 @@ serviceManager:
   enable-docker: false
   enable-auto-bootstrap: true
   newServiceRegistrationTimeout: 300000
-  auto-bootstrap:
+  redisHost: ip-172-31-30-255.us-west-2.compute.internal
+  redisPort: 6379
+  tempJarDirectory: "/tmp/jars"
+  serviceConfig:
     ############## CSRT Core Processes: #############
     discovery: 
       discovery-client: true 
-      command: "/home/tim/bin/jars/discovery-0.4.1-SNAPSHOT.jar" 
-      port: 8761 
-      hosts: 
+      version: "SNAPSHOT" 
+      ports: 
+        - "8761" 
+      bootstrapHosts: 
         - "ip-172-31-30-255.us-west-2.compute.internal"
         - "ip-172-31-30-254.us-west-2.compute.internal"
         - "ip-172-31-30-253.us-west-2.compute.internal"
     router: 
       discovery-client: true 
-      command: "/home/tim/bin/jars/router-0.4.1-SNAPSHOT.jar" 
-      port: 8765 
-      hosts: 
+      version: "SNAPSHOT" 
+      ports: 
+        - "8765" 
+      bootstrapHosts: 
         - "ip-172-31-30-255.us-west-2.compute.internal"
         - "ip-172-31-30-254.us-west-2.compute.internal"
         - "ip-172-31-30-253.us-west-2.compute.internal"
     turbine:
       discovery-client: true
-      command: "/home/tim/bin/jars/turbine-0.4.1-SNAPSHOT.jar"
-      port: 8766
-      hosts:
+      version: "SNAPSHOT" 
+      ports: 
+        -"8766"
+      bootstrapHosts:
         - "ip-172-31-30-255.us-west-2.compute.internal"
     query-service: 
       discovery-client: true 
-      command: "/home/tim/bin/jars/query-service-0.4.1-SNAPSHOT.jar" 
-      port: 8762 
-      hosts: 
+      version: "SNAPSHOT"
+      ports: 
+        - "8762" 
+      bootstrapHosts: 
         - "ip-172-31-30-253.us-west-2.compute.internal"
     redis-query-service:
       discovery-client: true
-      command: "/home/tim/bin/jars/redis-query-service-0.4.1-SNAPSHOT.jar"
-      port: 8763
-      hosts: 
+      version: "SNAPSHOT"
+      ports: 
+        - "8763"
+      bootstrapHosts: 
         - "ip-172-31-30-254.us-west-2.compute.internal"
     merchant-locator:
       discovery-client: true
       auto-scale: true
       scaleUpResponseTimeThreshold: 200
       scaleDownResponseTimeThreshold: 5
-      maxInstances: 3
+      maxInstances: 6
       minInstances: 1
       stableMaxIterations: 3
       unstableMaxIterations: 3
-      command: "/home/tim/bin/jars/merchant-locator-0.4.1-SNAPSHOT.jar"
-      port: 8764
-      hosts: 
+      version: "SNAPSHOT"
+      ports: 
+        "9010-9016"
+      bootstrapHosts: 
         - "ip-172-31-30-255.us-west-2.compute.internal"
     # Rabbit is running on host ip-172-31-30-253.us-west-2.compute.internal port 8766 and management port 8767
