--- a/application.yml
+++ b/application.yml
@@ -24,5 +24,5 @@ ribbon:
 
 spring:
   rabbitmq:
-    host: 172.31.30.253
-    port: 8766
+    host: ip-172-31-30-255.us-west-2.compute.internal
+    port: 9001
