--- a/service-manager.yml
+++ b/service-manager.yml
@@ -38,8 +38,8 @@ serviceManager:
         - "8765" 
       bootstrapHosts: 
         - "ip-172-31-30-255.us-west-2.compute.internal"
-        - "ip-172-31-30-254.us-west-2.compute.internal"
-        - "ip-172-31-30-253.us-west-2.compute.internal"
+        #- "ip-172-31-30-254.us-west-2.compute.internal"
+        #- "ip-172-31-30-253.us-west-2.compute.internal"
     turbine:
       discovery-client: true
       version: "SNAPSHOT" 
@@ -73,6 +73,20 @@ serviceManager:
       version: "SNAPSHOT"
       ports: 
         - "9010-9016"
+      #bootstrapHosts: 
+      #  - "ip-172-31-30-255.us-west-2.compute.internal"
+    hello-world:
+      discovery-client: true
+      auto-scale: false
+      scaleUpResponseTimeThreshold: 200
+      scaleDownResponseTimeThreshold: 5
+      maxInstances: 1
+      minInstances: 1
+      stableMaxIterations: 3
+      unstableMaxIterations: 3
+      version: "SNAPSHOT"
+      ports: 
+        - "9010-9016"
       bootstrapHosts: 
-        - "ip-172-31-30-255.us-west-2.compute.internal"
+        - "ip-172-31-30-254.us-west-2.compute.internal"
     # Rabbit is running on host ip-172-31-30-253.us-west-2.compute.internal port 8766 and management port 8767
