--- a/service-manager.yml
+++ b/service-manager.yml
@@ -38,28 +38,28 @@ serviceManager:
         - "8765" 
       bootstrapHosts: 
         - "canary"
-    turbine:
-      sslEnabled: false
-      discovery-client: true
-      version: "0.4.5-SNAPSHOT"
-      ports: 
-        - "8766"
-      bootstrapHosts:
-        - "canary"
-    hello-world:
-      sslEnabled: false
-      discovery-client: true
-      auto-scale: true
-      scaleUpResponseTimeThreshold: 250
-      scaleDownResponseTimeThreshold: 5
-      maxInstances: 3
-      minInstances: 1
-      stableMaxIterations: 3
-      unstableMaxIterations: 3
-      version: "0.4.5-SNAPSHOT"
-      ports: 
-        - "9010-9019"
-      bootstrapHosts: 
-        - "canary"
+    ##turbine:
+      ##sslEnabled: false
+      ##discovery-client: true
+      ##version: "0.4.5-SNAPSHOT"
+      ##ports: 
+      ##  - "8766"
+      ##bootstrapHosts:
+      ##  - "canary"
+   ##hello-world:
+      ##sslEnabled: false
+      ##discovery-client: true
+      ##auto-scale: true
+      ##scaleUpResponseTimeThreshold: 250
+      ##scaleDownResponseTimeThreshold: 5
+      ##maxInstances: 3
+      ##minInstances: 1
+      ##stableMaxIterations: 3
+      ##unstableMaxIterations: 3
+      ##version: "0.4.5-SNAPSHOT"
+      ##ports: 
+      ##  - "9010-9019"
+      ##bootstrapHosts: 
+      ##  - "canary"
 
    
