--- a/application.yml
+++ b/application.yml
@@ -16,8 +16,7 @@ eureka:
   client: 
     initialInstanceInfoReplicationIntervalSeconds: 5
     instanceInfoReplicationIntervalSeconds: 5
-    service-url:
-      defaultZone: http://66.195.246.158:8761/eureka/
+    registryFetchIntervalSeconds: 5
   server: 
     response-cache-update-interval-ms: 5000
     
